# ossatrisk

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: dataset-update.yml
data/: php-packages.json  php-suggestions.json  phpbuilder-packages.json
docs/: CNAME  Makefile  index.html  package-lock.json  package.json
docs/assets/css/: main.css
docs/assets/js/: main.js
src/: Makefile  base.py  main.py  package.py  php.py  pyproject.toml
src/builders/: base.py  php.py
src/ossatrisk/: http_client.py  main.py
src/ossatrisk/builders/: base.py  php.py
src/ossatrisk/scanner/: base.py  php.py
web/: index.html  main.css  main.js  package-lock.json
