[project]
name = "ossatrisk"
version = "0.2.0"
description = "Tracking high-risk oss packages: abandoned, undermaintained, or CVE-exposed. "
requires-python = ">=3.14"
authors = [
    { name="Hugo Posnic", email="hugo.posnic@protonmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "click>=8.3.1",
    "httpx[http2]>=0.28.1",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "ty>=0.0.23",
    "ruff>=0.15.2",
]

[project.urls]
Homepage = "https://github.com/Huluti/ossatrisk/"
Issues = "https://github.com/Huluti/ossatrisk/issues"

[project.scripts]
ossatrisk = "ossatrisk.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ossatrisk"]
